--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MangaRec</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <ul>
             <li>
-                <a>Sobre</a>
+                <a>Sobre Mangas</a>
+            </li>
+            <li>
+                <a>Opiniões</a>
+            </li>
+            <li>
+                <a>Gêneros</a>
             </li>
         </ul>
     </nav>
