--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <nav>
         <ul>
             <li>
-                <a>Sobre Mangas</a>
+                <a href="index.html">Sobre Mangas</a>
             </li>
             <li>
-                <a>Opiniões</a>
+                <a href="Opinioes.html">Opiniões</a>
             </li>
             <li>
-                <a>Gêneros</a>
+                <a href="generos.html">Gêneros</a>
             </li>
         </ul>
     </nav>
