--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
             </li>
         </ul>
     </nav>
+    <header>
+        <div class="center">
+            <img scr="./img/naruto.webp"></img>
+        </div>
+        <h1>MangaRec</h1>
+        <h2>Recomendações de Mangás ou animes</h2>
+    </header>
 </body>
 </html>
