--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </ul>
     </nav>
     <header>
-        
+
         <div class="center">
-            <img scr="./img/naruto.webp"></img>
+            <img src="./img/naruto.webp"></img>
         </div>
         <h1>MangaRec</h1>
         <h2>Recomendações de Mangás ou animes</h2>
