--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
         <div class="center">
             <img src="./img/naruto.webp"></img>
+            <img src="./img/bluelock.webp"></img>
+            <img src="./img/haikyuu.webp"></img>
+            <img src="./img/one-piece.jpg"></img>
         </div>
         <h1>MangaRec</h1>
         <h2>Recomendações de Mangás ou animes</h2>
