--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="center">
             <img src="./img/naruto.webp"></img>
-            <img src="./img/bluelock.webp"></img>
+            <img src="./img/blue-lock-cast-promo-image.webp"></img>
             <img src="./img/haikyuu.webp"></img>
             <img src="./img/one-piece.jpg"></img>
         </div>
