--- a/index.html
+++ b/index.html
@@ -31,5 +31,40 @@
         <h1>MangaRec</h1>
         <h2>Recomendações de Mangás ou animes</h2>
     </header>
+
+    <main>
+        <section>
+            <h3>Recomendações de Mangás</h3>
+            <p>
+                O MangaRec é um site que ajuda você a encontrar 
+                o mangá ideal para você! Com milhares de opções, 
+                o site recomenda mangás baseado no gênero de mangás que você escolher. 
+                Você também tem acesso a avaliações e sinopses. 
+                Além disso, o MangaRec possui novidades semanais de mangás, 
+                uma lista de mangás populares e uma biblioteca de recomendações de leitura. 
+                Visite e descubra o seu próximo mangá favorito hoje mesmo!
+
+            </p>
+        </section>[ <section>
+            <h3>Lembrete simples</h3>
+            <p>
+                Não consegui fazer um site bom o suficiente, por isso está tão simples assim,
+                porém espero que seja simples o suficiente para as pessoas conseguirem usar
+                sem problemas e não se perderem. Quero dar uma noa experiencia para os novos amantes
+                de animes e mangás.
+                
+            </p>
+        </section>
+        <section>
+            <h3>OBSERVAÇÂO</h3>
+            <p>
+                Temos alguns gêneros de animes ou mangás que eu posso não conhecer muito
+                então antes de postar algo terei certeza de pesquisar muito sobre e ter
+                certeza que não estou recomendando algo ruim, errado ou fora da classificação indicativa 
+                do próprio anime ou mangá.
+                
+            </p>
+        </section>]
+    </main>
 </body>
 </html>
